--- a/views/Brand_TA.html
+++ b/views/Brand_TA.html
@@ -44,7 +44,7 @@
                                 <ul>
                                     <li><a href="{{urlfor "MyInformationController.Get"}}">My Information</a></li>
                                     <li><a href="">Shopping Cart</a></li>
-                                    <li><a href="">Check Out</a></li>
+                                    <li><a href="{{urlfor "OrdersController.Get"}}">Order</a></li>
                                 </ul>
                             </li>
                         {{end}}
