--- a/views/Brand_Fender.html
+++ b/views/Brand_Fender.html
@@ -87,7 +87,7 @@
                 <div class="col-lg-12 col-md-12 d-flex align-items-stretch justify-content-center">
                     <div class="series-box">
                         <div class="series"><img src="/static/Picture/tele.jpg" alt="Telecaster"></div>
-                        <h4 style="text-align:center"><a href="{{urlfor "GuitarDisplayController.Get" ":brand" "fender" ":series" "telecaster"}}">Telecaster</a></h4>
+                        <h4 style="text-align:center"><a href="{{urlfor "GuitarDisplayController.Get" ":brand" "fender" ":series" "telecaster" ":neck" "all" ":fretboard" "all" ":body" "all"}}">Telecaster</a></h4>
                     </div>
                 </div>
 
